# neon

./: CLAUDE.md  README.md  SPEC.md  pyproject.toml
notebooks/: 01_european_option.ipynb  02_american_option.ipynb  03_asian_option.ipynb  04_bermuda_option.ipynb  05_bond.ipynb  06_yield_curve.ipynb  07_interest_rate_swap.ipynb  08_callable_bond.ipynb  09_bond_future.ipynb  10_svi_surface.ipynb  11_dupire_local_vol.ipynb  12_local_vol_option.ipynb  13_portfolio_risk.ipynb
src/neon/: __init__.py  main.py
src/neon/lib/core/: __init__.py  constants.py  currency.py  month_code.py  position_direction.py  time_steps.py
src/neon/lib/datetime/: __init__.py  day_count.py  ttm.py
src/neon/lib/fixed_income/: bond.py  bond_analytics.py  bond_future.py  callable_bond.py  coupon_schedule.py  discount_curve.py  frn.py  irs.py  zero_coupon_bond.py
src/neon/lib/greeks/: __init__.py  analytical_greeks.py  greeks.py  numerical_greeks.py
src/neon/lib/instruments/: cash.py  instrument.py
tests/: test_main.py
tests/lib/datetime/: test_ttm.py
tests/lib/fixed_income/: test_bond.py  test_bond_analytics.py  test_bond_future.py  test_callable_bond.py  test_coupon_schedule.py  test_discount_curve.py  test_frn.py  test_irs.py  test_zero_coupon_bond.py
tests/lib/greeks/: test_european_option_analytical_greeks.py  test_european_option_numerical_greeks.py
tests/lib/portfolio/: test_portfolio.py  test_position.py
tests/lib/pricing/: test_monte_carlo.py
tests/lib/risk/: test_risk_engine.py  test_risk_engine_bonds.py
tests/lib/surface/: test_vol_surface.py
(+34 files in other folders)
